--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "keywords": [
     "autorepairshop"
   ],
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/akmdelarosa/autorepairshop/issues"
   },
