--- a/bower.json
+++ b/bower.json
@@ -20,10 +20,15 @@
   ],
   "dependencies": {
     "angular-bootstrap-show-errors": "^2.3.0",
-    "angular": "^1.5.0",
+    "angular": "^1.5.4",
     "angular-bootstrap-calendar": "^0.19.6",
     "angular-bootstrap": "^1.2.5",
     "angular-animate": "^1.5.3",
-    "checklist-model": "^0.9.0"
+    "checklist-model": "^0.9.0",
+    "angular-flash-alert": "^2.2.7",
+    "ng-dialog": "^0.6.0"
+  },
+  "resolutions": {
+    "angular": "^1.5.4"
   }
 }
