--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.1",
     "ejs": "^2.4.1",
+    "errorhandler": "^1.4.3",
     "express": "^3.21.2",
     "express-session": "^1.13.0",
     "express-validator": "^2.20.3",
