--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ coverage
 build/Release
 
 # Dependency directory
-node_modules
+/node_modules
 
 # Optional npm cache directory
 .npm
@@ -32,4 +32,5 @@ node_modules
 # Optional REPL history
 .node_repl_history
 
-server/mysqlConnectionString.js
+.DS_Store
+/*.env
